--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ highlight:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 0
   order_by: -date
   
 # Category & Tag
@@ -62,18 +62,35 @@ tag_map:
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
-date_format: YYYY-MM-DD
-time_format: HH:mm:ss
+#date_format: YYYY-MM-DD
+#time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 0
 pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: next
+theme: aloha
+
+# 在归档页面显示所有文章 （Show all articles at archive page.）
+# 需要安装(Need to install) hexo-generator-archive 插件支持
+archive_generator:
+    per_page: 0
+    yearly: false
+    monthly: false
+    daily: false
+
+sidebar:
+   bio: Coder
+   avatar: /images/avatar.jpg
+   subtitle: 程序员
+   location: Beijing
+   social:
+     github: https://github.com/jzhang46
+     mail: mailto:jz3728@163.com
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
